--- a/subpages/cursos.html
+++ b/subpages/cursos.html
@@ -9,8 +9,8 @@
 
   <body>
     <h1>
-      EXPLICAÇÃO DO FUNCIONAMENTO E DO PORQUÊ ADOTAR ESSE MODELO DE
-      RECRUTAMENTO.
+      EXPLICAÇÃO DO FUNCIONAMENTO DOS CURSOS E DO PORQUÊ ADOTAR ESSA
+      FUNCIONALIDADE.
     </h1>
     <p>Não sera desenvolvido. Somente teoria de funcionamento.</p>
   </body>
