--- a/subpages/signin+up/login.html
+++ b/subpages/signin+up/login.html
@@ -11,9 +11,11 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <!-- SEGUIR ESSE TUTORIAL (parei em 13min): https://www.youtube.com/watch?v=piG91X4sV2U&list=LL&index=5&ab_channel=TrueCoder -->
 
   <body>
+    <header>
+      <a href="/index.html" class="logo">Recrutamento</a>
+    </header>
     <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
@@ -21,7 +23,7 @@
             <h2 class="title">Entrar</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Nome" />
+              <input type="text" placeholder="Email" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
@@ -31,15 +33,6 @@
 
             <p class="social-text">Ou entre com as redes sociais</p>
             <div class="social-media">
-              <a href="#" class="social-icon">
-                <i class="fab fa-facebook-f"> </i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-twitter"> </i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-google"> </i>
-              </a>
               <a href="#" class="social-icon">
                 <i class="fab fa-linkedin-in"> </i>
               </a>
@@ -60,19 +53,14 @@
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Senha" />
             </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Confirmar senha" />
+            </div>
             <input type="submit" value="Sign up" class="btn solid" />
 
             <p class="social-text">Ou cadastre com as redes sociais</p>
             <div class="social-media">
-              <a href="#" class="social-icon">
-                <i class="fab fa-facebook-f"> </i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-twitter"> </i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-google"> </i>
-              </a>
               <a href="#" class="social-icon">
                 <i class="fab fa-linkedin-in"> </i>
               </a>
@@ -90,8 +78,27 @@
             </p>
             <button class="btn transparent" id="sign-up-btn">Cadastar</button>
           </div>
+          <img src="/subpages/signin+up/img/hello.svg" class="image" alt="" />
+        </div>
+
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>Um de nós ?</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+              consequuntur omnis nihil?
+            </p>
+            <button class="btn transparent" id="sign-in-btn">Logar</button>
+          </div>
+          <img
+            src="/subpages/signin+up/img/feeling_proud.svg"
+            class="image"
+            alt=""
+          />
         </div>
       </div>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
