login_main.updates

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="#work">Trabalhe conosco</a></li>
       <li><a href="#cand">Candidate-se | Processos Seletivos</a></li>
       <li><a href="#educa">Educa Cidadão</a></li>
-      <li><a href="/subpages/signin+up/login.html">Login</a></li>
+      <li><a href="/subpages/Login/login.html">Login</a></li>
     </ul>
   </header>
 
@@ -87,7 +87,7 @@
     </div>
     <div class="content3">
       <div class="candBx">
-        <a href="/subpages/seletivos.html">
+        <a href="/subpages/signin+up/signin_up.html">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
           molestias id enim dolorum cupiditate? Fuga quas, facere cumque
