--- a/subpages/signin+up/signin_up.html
+++ b/subpages/signin+up/signin_up.html
@@ -23,7 +23,7 @@
             <h2 class="title">Entrar</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Email" />
+              <input type="text" placeholder="E-mail" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
