--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <div class="content3">
       <div class="candBx">
-        <a href="/subpages/signin+up/signin_up.html">
+        <a href="/subpages/signin+up/signin_up.php">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
           molestias id enim dolorum cupiditate? Fuga quas, facere cumque
