last3days.updates

--- a/subpages/terms.html
+++ b/subpages/terms.html
@@ -6,21 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <link rel="stylesheet" href="/subpages/style.css" />
+  <link rel="stylesheet" href="/myphp/subpages/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>SDC | Termos e Condições</title>
 </head>
 
 <body>
   <header>
-    <a href="#home" class="logo">Recrutamento</a>
+    <a href="/myphp/index.html#home" class="logo">Recrutamento</a>
     <div class="toggle"></div>
     <ul>
-      <li><a href="/index.html#about">Quem somos</a></li>
-      <li><a href="/index.html#work">Trabalhe conosco</a></li>
-      <li><a href="/index.html#cand">Candidate-se | Processos Seletivos</a></li>
-      <li><a href="/index.html#educa">Educa Cidadão</a></li>
-      <li><a href="/subpages/Login/login.html">Login</a></li>
+      <li><a href="/myphp/index.html#about">Quem somos</a></li>
+      <li><a href="/myphp/index.html#work">Trabalhe conosco</a></li>
+      <li><a href="/myphp/index.html#cand">Candidate-se | Processos Seletivos</a></li>
+      <li><a href="/myphp/index.html#educa">Educa Cidadão</a></li>
+      <li><a href="/myphp/subpages/Login/login_homepage.php">Login</a></li>
     </ul>
   </header>
 
@@ -167,9 +167,9 @@
     <div class="sec quickLinks">
       <h2>...</h2>
       <ul>
-        <li><a href="/subpages/faq.html">FAQ</a></li>
-        <li><a href="/subpages/privacy.html">Política de Privacidade</a></li>
-        <li><a href="/subpages/terms.html">Termos e Condições</a></li>
+        <li><a href="/myphp/subpages/faq.html">FAQ</a></li>
+        <li><a href="/myphp/subpages/privacy.html">Política de Privacidade</a></li>
+        <li><a href="/myphp/subpages/terms.html">Termos e Condições</a></li>
       </ul>
     </div>
     <div class="sec contact">
