--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="#work">Trabalhe conosco</a></li>
       <li><a href="#cand">Candidate-se | Processos Seletivos</a></li>
       <li><a href="#educa">Educa Cidadão</a></li>
-      <li><a href="/subpages/Login/login.html">Login</a></li>
+      <li><a href="/myphp/subpages/Login/login_homepage.php">Login</a></li>
     </ul>
   </header>
 
@@ -51,7 +51,7 @@
         </p>
       </div>
       <div class="w50">
-        <img src="/images/img1.png" class="img" />
+        <img src="/myphp/images/img1.png" class="img" />
       </div>
     </div>
   </section>
@@ -87,7 +87,7 @@
     </div>
     <div class="content3">
       <div class="candBx">
-        <a href="/subpages/signin+up/signin_up.php">
+        <a href="/myphp/subpages/signin+up/signin_up.php">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
           molestias id enim dolorum cupiditate? Fuga quas, facere cumque
@@ -98,7 +98,7 @@
       </a>
       </div>
       <div class="candBx2">
-        <a href="/subpages/hackathons.html">
+        <a href="/myphp/subpages/hackathons.html">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
           molestias id enim dolorum cupiditate? Fuga quas, facere cumque
@@ -121,7 +121,7 @@
     </div>
     <div class="slider owl-carousel">
       <div class="card">
-        <div class="img"><img src="/images/curso1.jpeg" alt="" /></div>
+        <div class="img"><img src="/myphp/images/curso1.jpeg" alt="" /></div>
         <div class="content4">
           <div class="title">Fotográfia</div>
           <div class="sub-title">Prof. Reinaldo</div>
@@ -131,12 +131,12 @@
             Consequatur, ullam.
           </p>
           <div class="btn2">
-            <a href="/subpages/cursos.html"><button>Mais info.</button></a>
+            <a href="/myphp/subpages/cursos.html"><button>Mais info.</button></a>
           </div>
         </div>
       </div>
       <div class="card">
-        <div class="img"><img src="/images/curso2.jpeg" alt="" /></div>
+        <div class="img"><img src="/myphp/images/curso2.jpeg" alt="" /></div>
         <div class="content4">
           <div class="title">Programação</div>
           <div class="sub-title">Profª. Patrica</div>
@@ -146,12 +146,12 @@
             Consequatur, ullam.
           </p>
           <div class="btn2">
-            <a href="/subpages/cursos.html"><button>Mais info.</button></a>
+            <a href="/myphp/subpages/cursos.html"><button>Mais info.</button></a>
           </div>
         </div>
       </div>
       <div class="card">
-        <div class="img"><img src="/images/curso3.jpeg" alt="" /></div>
+        <div class="img"><img src="/myphp/images/curso3.jpeg" alt="" /></div>
         <div class="content4">
           <div class="title">Comunicação</div>
           <div class="sub-title">Prof. Sandro</div>
@@ -161,7 +161,7 @@
             Consequatur, ullam.
           </p>
           <div class="btn2">
-            <a href="/subpages/cursos.html"><button>Mais info.</button></a>
+            <a href="/myphp/subpages/cursos.html"><button>Mais info.</button></a>
           </div>
         </div>
       </div>
@@ -198,8 +198,8 @@
       <div class="sec quickLinks">
         <h2>...</h2>
         <ul>
-          <li><a href="/subpages/privacy.html">Política de Privacidade</a></li>
-          <li><a href="/subpages/terms.html">Termos e Condições</a></li>
+          <li><a href="/myphp/subpages/privacy.html">Política de Privacidade</a></li>
+          <li><a href="/myphp/subpages/terms.html">Termos e Condições</a></li>
         </ul>
       </div>
       <div class="sec contact">
