--- a/subpages/signin+up/new_user.html
+++ b/subpages/signin+up/new_user.html
@@ -1,1 +1,319 @@
-Aqui ficara o cadastro dos novos candidatos, após clicar no botão de cadastro.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>SDC | Cadastro</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="style_newuser.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-12">
+          <div class="multistep-container">
+            <div class="mutistep-form-area">
+              <div class="form-box">
+                <ul class="active-button">
+                  <li class="active">
+                    <span class="round-btn">1</span>
+                  </li>
+                  <li>
+                    <span class="round-btn">2</span>
+                  </li>
+                  <li>
+                    <span class="round-btn">3</span>
+                  </li>
+                </ul>
+
+                <h4>Informações Pessoais</h4>
+                <form action="">
+                  <div class="form-group">
+                    <label for="">Nome Completo</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Nome e sobrenome"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">E-mail</label>
+                    <input
+                      type="email"
+                      name=""
+                      placeholder="E-mail para contato"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">CPF</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Ex: 000.000.000-00"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Data de Nascimento</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Ex: 01-12-1999 "
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Endereço</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Ex: Av. Paulista, 99 - São Paulo - SP - 99999-99 "
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Telefone</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Número para eventuais contatos. Ex: (99)99999-9999"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Gênero</label>
+                    <select
+                      class="custom-select myinput"
+                      name="class"
+                      id="class"
+                    >
+                      <option value="male">Homem</option>
+                      <option value="female">Mulher</option>
+                      <option value="other">Outros</option>
+                    </select>
+                  </div>
+
+                  <div class="button-row">
+                    <input type="button" value="Próximo" class="next" />
+                  </div>
+                </form>
+              </div>
+
+              <div class="form-box">
+                <ul class="active-button">
+                  <li class="active">
+                    <span class="round-btn">1</span>
+                  </li>
+                  <li class="active">
+                    <span class="round-btn">2</span>
+                  </li>
+                  <li>
+                    <span class="round-btn">3</span>
+                  </li>
+                </ul>
+
+                <h4>Educação e Formação Acadêmica</h4>
+                <form action="">
+                  <div class="form-group">
+                    <label for=""
+                      >Instituições Frequentadas | Diploma | Data de
+                      Conclusão</label
+                    >
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Instituição 1"
+                      id=""
+                      class="form-control"
+                    />
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Instituição 2"
+                      id=""
+                      class="form-control"
+                    />
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Instituição 3"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Habilidades e Qualificações</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Ex: Excel Avançado, PowerBI, Python.. (SEPARE POR ',')"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Idiomas</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Ex: PT NATIVO, EN C2, FR A1.. (SEPARE POR ',')"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+
+                  <div class="button-row">
+                    <input type="button" value="Anterior" class="previous" />
+                    <input type="button" value="Próximo" class="next" />
+                  </div>
+                </form>
+              </div>
+
+              <div class="form-box">
+                <ul class="active-button">
+                  <li class="active">
+                    <span class="round-btn">1</span>
+                  </li>
+                  <li class="active">
+                    <span class="round-btn">2</span>
+                  </li>
+                  <li class="active">
+                    <span class="round-btn">3</span>
+                  </li>
+                </ul>
+
+                <h4>Experiência de trabalho</h4>
+                <form action="">
+                  <div class="form-group">
+                    <label for="">Última Experiência</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Empregador"
+                      id=""
+                      class="form-control"
+                    />
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Data de entrada e saida. Ex: 12/2018 - 06/2020"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Cargo e Responsabilidades"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Salário"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Motivo de Saída"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Penúltima Experiência</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Empregador"
+                      id=""
+                      class="form-control"
+                    />
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Data de entrada e saida. Ex: 12/2018 - 06/2020"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Cargo e Responsabilidades"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Salário"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Motivo de Saída"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Antepenúltima Experiência</label>
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Empregador"
+                      id=""
+                      class="form-control"
+                    />
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Data de entrada e saida. Ex: 12/2018 - 06/2020"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Cargo e Responsabilidades"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Salário"
+                      id=""
+                      class="form-control"
+                    /><input
+                      type="text"
+                      name=""
+                      placeholder="Motivo de Saída"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+
+                  <div class="button-row">
+                    <input type="button" value="Anterior" class="previous" />
+                    <input type="submit" value="Finalizar" class="submit" />
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script src="code.js"></script>
+  </body>
+</html>
