--- a/subpages/cursos.html
+++ b/subpages/cursos.html
@@ -9,9 +9,118 @@
 
   <body>
     <h1>
-      EXPLICAÇÃO DO FUNCIONAMENTO DOS CURSOS E DO PORQUÊ ADOTAR ESSA
-      FUNCIONALIDADE.
+      EXPLICAÇÃO DO FUNCIONAMENTO DOS CURSOS E DO PORQUÊ ADOTAR ESSE PROGRAMA.
     </h1>
-    <p>Não sera desenvolvido. Somente teoria de funcionamento.</p>
+    <p>
+      Muitas vezes selecionar profissionais que se adequam as necessidades da
+      empresa e possuem a qualificação necessária pode ser uma tarefa difícil.
+      <b
+        >Portanto, investir no treinamento e desenvolvimento de habilidades de
+        possiveis novos colaboradores pode ser uma alternativa para lidar com
+        essa dificuldade.
+      </b>
+    </p>
+    <p>
+      Por mais que a empresa trabalhe com ideias modernas e tenha processos bem
+      planejados, se não houver capacitação profissional de funcionários, e a
+      equipe estiver estagnada, o negócio experimentará problemas em diferentes
+      níveis.
+    </p>
+    <p>
+      Atualmente, o potencial de entrega de resultados de uma organização não se
+      reflete somente em seu produto, ou no mercado em que atua.
+      <b
+        >A capacidade crítica, de execução e a habilidade de se reinventar
+        diariamente é fundamental para ter o principal ativo de uma empresa, que
+        são as pessoas, prontos para os desafios.
+      </b>
+    </p>
+    <p>
+      <b>
+        Cada vez mais será necessário ter utilidade comprovada e uma renovação
+        contínua de conhecimento para se manter ativo no mercado de avanço
+        tecnológico escalável.
+      </b>
+    </p>
+
+    <p>
+      Com uma equipe mais qualificada, a empresa certamente alcançará melhores
+      resultados,
+      <b
+        >o que garante mais visibilidade e competitividade para a
+        organização.</b
+      >
+      A capacitação dos colaboradores - internos ou externos - reflete, na
+      melhoria do atendimento aos clientes e no aumento da eficiência no
+      trabalho, o que melhora a imagem da empresa.
+    </p>
+    <p>
+      Além disso,
+      <b
+        >empresas com um clima organizacional favorável, que se preocupam com o
+        desenvolvimento e retenção de talentos e que possuem equipes
+        qualificadas ganham vantagem em relação a empresas menos estruturadas.
+      </b>
+      Isso favorece a atração de profissionais qualificados e de novos clientes
+      e parcerias para a organização.
+    </p>
+    <p>
+      Investir na capacitação profissional é importante não apenas para treinar
+      e desenvolver as habilidades dos colaboradores, mas também para
+      proporcionar um <b>desenvolvimento saudável da própria empresa.</b>
+      Portanto, é fundamental investigar as necessidades da organização e criar
+      programas de treinamento e desenvolvimento que atendam a essas demandas.
+    </p>
+
+    <h2>Funcionamento proposto</h2>
+    <p>
+      Quando falamos de um processo de capacitação estruturado isso não
+      significa somente entregar uma série aleatória de treinamentos. Nesse
+      contexto, é importante destacar alguns pontos relevantes para gerar os
+      melhores resultados com essas iniciativas:
+    </p>
+    <ol type="1">
+      <li>
+        <b>Identifique o cliente interno e externo. </b>Encontre o perfil certo
+        de pessoas que irá participar de cada processo educacional. Reflita
+        sobre o porquê essa capacitação/curso é realmente necessária, quais os
+        problemas que pretende sanar e quais os resultados que são esperados com
+        isso de forma objetiva.
+      </li>
+      <li>
+        <b>Levante as necessidades. </b>Realize entrevistas, questionários,
+        colete informações da sua pesquisa de satisfação e de avaliações de
+        desempenho para identificar os principais gargalos que precisam ser
+        sanados e enfatize, junto aos líderes da sua empresa, a importância de
+        prevenir os futuro problemas através do processo de desenvolvimento.
+      </li>
+      <li>
+        <b>Execute o processo controlado. </b>Realize os cursos definidos
+        através das reais necessidades da organização, sempre tendo de forma
+        clara e organizada os resultados esperados, a relação entre custo e
+        benefício, os temas e metodologias, assim como o corpo de instrutores, e
+        informações de infraestrutura da capacitação.
+      </li>
+      <li>
+        <b>Avalie os resultados. </b>Faça um levantamento sobre o custo do seu
+        programa e o retorno que isso trouxe à empresa para entregar este
+        feedback à organização. Para isso, verifique se o curso agregou valor
+        para a empresa, aumentou a produtividade dos funcionários, ajustou
+        eventuais comportamentos, melhorou as relações interpessoais, etc.
+      </li>
+    </ol>
+    Tudo isso deixará a empresa "Shopping do Cidadão" um passo à frente das
+    concorrentes no quesito gestão, além de aumentar as chances de se tornar
+    referência no mercado em longo prazo.
+
+    <br /><br /><br />
+    <img
+      src="/images/wireframe.png"
+      alt="Wireframe 'Educa Cidadão'"
+      width="1000px"
+    />
+    <figcaption>
+      Wireframe inicial - na visão dos gestores - da ideia proposta.
+    </figcaption>
   </body>
 </html>
