--- a/subpages/hackathons.html
+++ b/subpages/hackathons.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SDC | Hackathons</title>
-  </head>
 
-  <body>
-    <h1>
-      EXPLICAÇÃO DO FUNCIONAMENTO E DO PORQUÊ ADOTAR ESSE MODELO DE
-      RECRUTAMENTO.
-    </h1>
-    <p>Não sera desenvolvido. Somente teoria de funcionamento.</p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SDC | Hackathons</title>
+</head>
+
+<body>
+  <h1>
+    EXPLICAÇÃO DO FUNCIONAMENTO E DO PORQUÊ ADOTAR ESSE MODELO DE
+    RECRUTAMENTO.
+  </h1>
+  <p>
+    Um hackathon é um evento competitivo no qual equipes de designers,
+    desenvolvedores e especialistas no assunto criam soluções para um problema
+    específico dentro de um período de tempo definido. O objetivo é construir
+    um protótipo funcional na forma de um website, um aplicativo ou um robô
+    para resolver um determinado problema.
+  </p>
+
+  <p>
+    Quando se trata de recrutamento, os cinco parâmetros ou métricas
+    importantes a seguir determinam sua eficácia:
+    <ul>
+      <li>Qualidade de contratação</li>
+      <li> Tempo de contratação </li>
+      <li> Custo do contratação </li>
+      <li>Experiência do candidato </li>
+      <li>Diversidade e inclusão </li>
+    </ul>
+    A Hackathon, como ferramenta de contratação, serve bem em todos
+    os parâmetros mencionados acima.
+  </p>
+
+  <h2>Funcionamento proposto</h2>
+  <p>
+    Abaixo, a equipe Eletrolls irá propor uma sugestão de modelo Hackathon a ser implementado:
+  </p>
+  <ol type="1">
+    <li><b>Decidir o papel</b> e listar as habilidades desejadas para um determinado papel.</li>
+    <li><b>Elaborar regras dos problemas</b> que avaliem as habilidades que envolvem o papel.</li>
+    <p>
+      Por exemplo: Se você estiver contratando um <b>desenvolvedor Full-Stack</b>, o problema ou tarefa deve ser projetado para avaliar:
+      <ul>
+        <li>Compreensão de linguagens de programação Front-End, como HTML, CSS, e Javascript</li>
+        <li>Compreensão de linguagens de programação Back-End, como PHP, Python e Ruby</li>
+        <li>Conhecimento de bancos de dados e sistemas operacionais</li>
+        <li>Experiência em implantação e hospedagem</li>
+        <li>Conhecimento de APIs/serviços de terceiros</li>
+      </ul>
+    </p>
+    <li><b>Convidar os participantes.</b> Isto pode ser um desafio para a maioria das empresas. A parceria com empresas de gestão hackathon com uma animada comunidade de desenvolvedores, junto com o planejamento proposto na plataforma "Shopping do Cidadão", ajudará a atrair um grande número de participantes.</li>
+    <li><b>Avaliar e pré-selecionar candidatos.</b> Convidar os candidatos de uma lista restrita para uma entrevista e ofertas de contratação. O uso da plataforma desenvolvida torna o trabalho 10X mais fácil à medida que as submissões, avaliações e seleções são simplificados. Além disso, todos os participantes poderão ser incluidos em uma "Talent Pool", ficando disponíveis à futuros Processos Seletivos/Hackathons.</li>
+  </ol>
+</body>
+
 </html>
